compiler/src/wic.output
Terminales no usados en la gramática

   NEW
   CONTINUE
   BREAK
   RETURN


Gramática

    0 $accept: input $end

    1 input: instr END_OF_INSTR input
    2      | END_OF_INSTR input
    3      | OPEN_CONTEXT_TAG input CLOSE_CONTEXT_TAG input
    4      | %empty

    5 data_init: GLOBAL data_type
    6          | STATIC data_type
    7          | data_type
    8          | GLOBAL array_init
    9          | STATIC array_init
   10          | array_init

   11 array_init: data_type SQUARE_BRACKET_OPEN INT_VAL SQUARE_BRACKET_CLOSE
   12           | data_type SQUARE_BRACKET_OPEN SQUARE_BRACKET_CLOSE

   13 data_type: INT_TYPE
   14          | REAL_TYPE
   15          | BOOL_TYPE
   16          | CHAR_TYPE
   17          | VOID

   18 instr: data_init ID
   19      | data_init ID ASSIGN expr
   20      | ID array_access
   21      | ID ASSIGN expr
   22      | ID array_access ASSIGN expr
   23      | if_instr
   24      | for_instr
   25      | while_instr
   26      | expr
   27      | fun_init
   28      | fun_call

   29 params: params ELEM_SEPARATOR data_type ID
   30       | data_type ID

   31 args: args ELEM_SEPARATOR expr
   32     | expr

   33 fun_init: FUN data_type ID PARETHESES_OPEN params PARETHESES_CLOSE HEADER_END END_OF_INSTR OPEN_CONTEXT_TAG input CLOSE_CONTEXT_TAG
   34         | FUN data_type ID PARETHESES_OPEN params PARETHESES_CLOSE END_OF_INSTR

   35 fun_call: ID PARETHESES_OPEN args PARETHESES_CLOSE END_OF_INSTR

   36 while_instr: expr FOR_WHILE_CLAUSE HEADER_END END_OF_INSTR OPEN_CONTEXT_TAG input CLOSE_CONTEXT_TAG while_middle_blocks while_end_block

   37 while_middle_blocks: while_middle_blocks ELSE_IF_FOR_WHILE_CLAUSE expr FOR_WHILE_CLAUSE HEADER_END END_OF_INSTR OPEN_CONTEXT_TAG input CLOSE_CONTEXT_TAG
   38                    | %empty

   39 while_end_block: ELSE_IF_FOR_WHILE_CLAUSE FOR_WHILE_CLAUSE HEADER_END END_OF_INSTR OPEN_CONTEXT_TAG input CLOSE_CONTEXT_TAG
   40                | %empty

   41 for_instr: expr FOR_WHILE_CLAUSE expr HEADER_END END_OF_INSTR OPEN_CONTEXT_TAG input CLOSE_CONTEXT_TAG for_middle_blocks for_end_block

   42 for_middle_blocks: for_middle_blocks ELSE_IF_FOR_WHILE_CLAUSE expr FOR_WHILE_CLAUSE expr HEADER_END END_OF_INSTR OPEN_CONTEXT_TAG input CLOSE_CONTEXT_TAG
   43                  | %empty

   44 for_end_block: ELSE_IF_FOR_WHILE_CLAUSE FOR_WHILE_CLAUSE HEADER_END END_OF_INSTR OPEN_CONTEXT_TAG input CLOSE_CONTEXT_TAG
   45              | %empty

   46 if_instr: expr IF_CLAUSE HEADER_END END_OF_INSTR OPEN_CONTEXT_TAG input CLOSE_CONTEXT_TAG if_middle_blocks if_end_block

   47 if_middle_blocks: if_middle_blocks ELSE_IF_FOR_WHILE_CLAUSE expr IF_CLAUSE HEADER_END END_OF_INSTR OPEN_CONTEXT_TAG input CLOSE_CONTEXT_TAG
   48                 | %empty

   49 if_end_block: ELSE_IF_FOR_WHILE_CLAUSE IF_CLAUSE HEADER_END END_OF_INSTR OPEN_CONTEXT_TAG input CLOSE_CONTEXT_TAG
   50             | %empty

   51 array_access: SQUARE_BRACKET_OPEN INT_VAL SQUARE_BRACKET_CLOSE

   52 expr: ID
   53     | expr SUM term
   54     | expr SUBSTRACT term
   55     | INCREMENT ID
   56     | ID INCREMENT
   57     | DECREMENT ID
   58     | ID DECREMENT
   59     | expr LESS term
   60     | expr LESS_EQUALS term
   61     | expr GREATER term
   62     | expr GREATER_EQUALS term
   63     | expr EQUALS term
   64     | expr NOT_EQUALS term
   65     | expr AND term
   66     | expr OR term
   67     | NOT term
   68     | expr AND_BIT term
   69     | expr OR_BIT term
   70     | expr XOR_BIT term
   71     | expr LEFT_SHIFT term
   72     | expr RIGHT_SHIFT term
   73     | expr UNION term
   74     | expr DIFFERENCE term
   75     | expr INTERSECTION term
   76     | term
   77     | data_vector

   78 term: term PRODUCT power
   79     | term DIVIDE power
   80     | term MODULUS power
   81     | power

   82 power: power RADICAL factor
   83      | power POWER factor
   84      | factor

   85 factor: PARETHESES_OPEN expr PARETHESES_CLOSE
   86       | data_value

   87 data_value: INT_VAL
   88           | SUBSTRACT INT_VAL
   89           | REAL_VAL
   90           | SUBSTRACT REAL_VAL
   91           | BOOL_VAL
   92           | CHAR_QUOTE CHAR_VAL CHAR_QUOTE
   93           | STRING_QUOTE STRING_VAL STRING_QUOTE

   94 data_vector: CURLY_BRACKET_OPEN args CURLY_BRACKET_CLOSE


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
NEW (258)
CONTINUE (259)
BREAK (260)
RETURN (261)
FUN (262) 33 34
GLOBAL (263) 5 8
STATIC (264) 6 9
INT_VAL (265) 11 51 87 88
REAL_VAL (266) 89 90
BOOL_VAL (267) 91
CHAR_VAL (268) 92
STRING_VAL (269) 93
INT_TYPE (270) 13
REAL_TYPE (271) 14
BOOL_TYPE (272) 15
CHAR_TYPE (273) 16
VOID (274) 17
ASSIGN (275) 19 21 22
SUM (276) 53
SUBSTRACT (277) 54 88 90
PRODUCT (278) 78
DIVIDE (279) 79
MODULUS (280) 80
POWER (281) 83
RADICAL (282) 82
INCREMENT (283) 55 56
DECREMENT (284) 57 58
AND (285) 65
OR (286) 66
NOT (287) 67
EQUALS (288) 63
NOT_EQUALS (289) 64
GREATER (290) 61
GREATER_EQUALS (291) 62
LESS (292) 59
LESS_EQUALS (293) 60
AND_BIT (294) 68
OR_BIT (295) 69
XOR_BIT (296) 70
LEFT_SHIFT (297) 71
RIGHT_SHIFT (298) 72
UNION (299) 73
DIFFERENCE (300) 74
INTERSECTION (301) 75
IF_CLAUSE (302) 46 47 49
FOR_WHILE_CLAUSE (303) 36 37 39 41 42 44
HEADER_END (304) 33 36 37 39 41 42 44 46 47 49
ELSE_IF_FOR_WHILE_CLAUSE (305) 37 39 42 44 47 49
SQUARE_BRACKET_OPEN (306) 11 12 51
SQUARE_BRACKET_CLOSE (307) 11 12 51
CURLY_BRACKET_OPEN (308) 94
CURLY_BRACKET_CLOSE (309) 94
ELEM_SEPARATOR (310) 29 31
PARETHESES_OPEN (311) 33 34 35 85
PARETHESES_CLOSE (312) 33 34 35 85
END_OF_INSTR (313) 1 2 33 34 35 36 37 39 41 42 44 46 47 49
OPEN_CONTEXT_TAG (314) 3 33 36 37 39 41 42 44 46 47 49
CLOSE_CONTEXT_TAG (315) 3 33 36 37 39 41 42 44 46 47 49
CHAR_QUOTE (316) 92
STRING_QUOTE (317) 93
ID (318) 18 19 20 21 22 29 30 33 34 35 52 55 56 57 58


No terminales con las reglas donde aparecen

$accept (64)
    en la izquierda: 0
input (65)
    en la izquierda: 1 2 3 4, en la derecha: 0 1 2 3 33 36 37 39 41
    42 44 46 47 49
data_init (66)
    en la izquierda: 5 6 7 8 9 10, en la derecha: 18 19
array_init (67)
    en la izquierda: 11 12, en la derecha: 8 9 10
data_type (68)
    en la izquierda: 13 14 15 16 17, en la derecha: 5 6 7 11 12 29
    30 33 34
instr (69)
    en la izquierda: 18 19 20 21 22 23 24 25 26 27 28, en la derecha:
    1
params (70)
    en la izquierda: 29 30, en la derecha: 29 33 34
args (71)
    en la izquierda: 31 32, en la derecha: 31 35 94
fun_init (72)
    en la izquierda: 33 34, en la derecha: 27
fun_call (73)
    en la izquierda: 35, en la derecha: 28
while_instr (74)
    en la izquierda: 36, en la derecha: 25
while_middle_blocks (75)
    en la izquierda: 37 38, en la derecha: 36 37
while_end_block (76)
    en la izquierda: 39 40, en la derecha: 36
for_instr (77)
    en la izquierda: 41, en la derecha: 24
for_middle_blocks (78)
    en la izquierda: 42 43, en la derecha: 41 42
for_end_block (79)
    en la izquierda: 44 45, en la derecha: 41
if_instr (80)
    en la izquierda: 46, en la derecha: 23
if_middle_blocks (81)
    en la izquierda: 47 48, en la derecha: 46 47
if_end_block (82)
    en la izquierda: 49 50, en la derecha: 46
array_access (83)
    en la izquierda: 51, en la derecha: 20 22
expr (84)
    en la izquierda: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    68 69 70 71 72 73 74 75 76 77, en la derecha: 19 21 22 26 31 32
    36 37 41 42 46 47 53 54 59 60 61 62 63 64 65 66 68 69 70 71 72
    73 74 75 85
term (85)
    en la izquierda: 78 79 80 81, en la derecha: 53 54 59 60 61 62
    63 64 65 66 67 68 69 70 71 72 73 74 75 76 78 79 80
power (86)
    en la izquierda: 82 83 84, en la derecha: 78 79 80 81 82 83
factor (87)
    en la izquierda: 85 86, en la derecha: 82 83 84
data_value (88)
    en la izquierda: 87 88 89 90 91 92 93, en la derecha: 86
data_vector (89)
    en la izquierda: 94, en la derecha: 77


Estado 0

    0 $accept: . input $end

    FUN                 desplazar e ir al estado 1
    GLOBAL              desplazar e ir al estado 2
    STATIC              desplazar e ir al estado 3
    INT_VAL             desplazar e ir al estado 4
    REAL_VAL            desplazar e ir al estado 5
    BOOL_VAL            desplazar e ir al estado 6
    INT_TYPE            desplazar e ir al estado 7
    REAL_TYPE           desplazar e ir al estado 8
    BOOL_TYPE           desplazar e ir al estado 9
    CHAR_TYPE           desplazar e ir al estado 10
    VOID                desplazar e ir al estado 11
    SUBSTRACT           desplazar e ir al estado 12
    INCREMENT           desplazar e ir al estado 13
    DECREMENT           desplazar e ir al estado 14
    NOT                 desplazar e ir al estado 15
    CURLY_BRACKET_OPEN  desplazar e ir al estado 16
    PARETHESES_OPEN     desplazar e ir al estado 17
    END_OF_INSTR        desplazar e ir al estado 18
    OPEN_CONTEXT_TAG    desplazar e ir al estado 19
    CHAR_QUOTE          desplazar e ir al estado 20
    STRING_QUOTE        desplazar e ir al estado 21
    ID                  desplazar e ir al estado 22

    $default  reduce usando la regla 4 (input)

    input        ir al estado 23
    data_init    ir al estado 24
    array_init   ir al estado 25
    data_type    ir al estado 26
    instr        ir al estado 27
    fun_init     ir al estado 28
    fun_call     ir al estado 29
    while_instr  ir al estado 30
    for_instr    ir al estado 31
    if_instr     ir al estado 32
    expr         ir al estado 33
    term         ir al estado 34
    power        ir al estado 35
    factor       ir al estado 36
    data_value   ir al estado 37
    data_vector  ir al estado 38


Estado 1

   33 fun_init: FUN . data_type ID PARETHESES_OPEN params PARETHESES_CLOSE HEADER_END END_OF_INSTR OPEN_CONTEXT_TAG input CLOSE_CONTEXT_TAG
   34         | FUN . data_type ID PARETHESES_OPEN params PARETHESES_CLOSE END_OF_INSTR

    INT_TYPE   desplazar e ir al estado 7
    REAL_TYPE  desplazar e ir al estado 8
    BOOL_TYPE  desplazar e ir al estado 9
    CHAR_TYPE  desplazar e ir al estado 10
    VOID       desplazar e ir al estado 11

    data_type  ir al estado 39


Estado 2

    5 data_init: GLOBAL . data_type
    8          | GLOBAL . array_init

    INT_TYPE   desplazar e ir al estado 7
    REAL_TYPE  desplazar e ir al estado 8
    BOOL_TYPE  desplazar e ir al estado 9
    CHAR_TYPE  desplazar e ir al estado 10
    VOID       desplazar e ir al estado 11

    array_init  ir al estado 40
    data_type   ir al estado 41


Estado 3

    6 data_init: STATIC . data_type
    9          | STATIC . array_init

    INT_TYPE   desplazar e ir al estado 7
    REAL_TYPE  desplazar e ir al estado 8
    BOOL_TYPE  desplazar e ir al estado 9
    CHAR_TYPE  desplazar e ir al estado 10
    VOID       desplazar e ir al estado 11

    array_init  ir al estado 42
    data_type   ir al estado 43


Estado 4

   87 data_value: INT_VAL .

    $default  reduce usando la regla 87 (data_value)


Estado 5

   89 data_value: REAL_VAL .

    $default  reduce usando la regla 89 (data_value)


Estado 6

   91 data_value: BOOL_VAL .

    $default  reduce usando la regla 91 (data_value)


Estado 7

   13 data_type: INT_TYPE .

    $default  reduce usando la regla 13 (data_type)


Estado 8

   14 data_type: REAL_TYPE .

    $default  reduce usando la regla 14 (data_type)


Estado 9

   15 data_type: BOOL_TYPE .

    $default  reduce usando la regla 15 (data_type)


Estado 10

   16 data_type: CHAR_TYPE .

    $default  reduce usando la regla 16 (data_type)


Estado 11

   17 data_type: VOID .

    $default  reduce usando la regla 17 (data_type)


Estado 12

   88 data_value: SUBSTRACT . INT_VAL
   90           | SUBSTRACT . REAL_VAL

    INT_VAL   desplazar e ir al estado 44
    REAL_VAL  desplazar e ir al estado 45


Estado 13

   55 expr: INCREMENT . ID

    ID  desplazar e ir al estado 46


Estado 14

   57 expr: DECREMENT . ID

    ID  desplazar e ir al estado 47


Estado 15

   67 expr: NOT . term

    INT_VAL          desplazar e ir al estado 4
    REAL_VAL         desplazar e ir al estado 5
    BOOL_VAL         desplazar e ir al estado 6
    SUBSTRACT        desplazar e ir al estado 12
    PARETHESES_OPEN  desplazar e ir al estado 17
    CHAR_QUOTE       desplazar e ir al estado 20
    STRING_QUOTE     desplazar e ir al estado 21

    term        ir al estado 48
    power       ir al estado 35
    factor      ir al estado 36
    data_value  ir al estado 37


Estado 16

   94 data_vector: CURLY_BRACKET_OPEN . args CURLY_BRACKET_CLOSE

    INT_VAL             desplazar e ir al estado 4
    REAL_VAL            desplazar e ir al estado 5
    BOOL_VAL            desplazar e ir al estado 6
    SUBSTRACT           desplazar e ir al estado 12
    INCREMENT           desplazar e ir al estado 13
    DECREMENT           desplazar e ir al estado 14
    NOT                 desplazar e ir al estado 15
    CURLY_BRACKET_OPEN  desplazar e ir al estado 16
    PARETHESES_OPEN     desplazar e ir al estado 17
    CHAR_QUOTE          desplazar e ir al estado 20
    STRING_QUOTE        desplazar e ir al estado 21
    ID                  desplazar e ir al estado 49

    args         ir al estado 50
    expr         ir al estado 51
    term         ir al estado 34
    power        ir al estado 35
    factor       ir al estado 36
    data_value   ir al estado 37
    data_vector  ir al estado 38


Estado 17

   85 factor: PARETHESES_OPEN . expr PARETHESES_CLOSE

    INT_VAL             desplazar e ir al estado 4
    REAL_VAL            desplazar e ir al estado 5
    BOOL_VAL            desplazar e ir al estado 6
    SUBSTRACT           desplazar e ir al estado 12
    INCREMENT           desplazar e ir al estado 13
    DECREMENT           desplazar e ir al estado 14
    NOT                 desplazar e ir al estado 15
    CURLY_BRACKET_OPEN  desplazar e ir al estado 16
    PARETHESES_OPEN     desplazar e ir al estado 17
    CHAR_QUOTE          desplazar e ir al estado 20
    STRING_QUOTE        desplazar e ir al estado 21
    ID                  desplazar e ir al estado 49

    expr         ir al estado 52
    term         ir al estado 34
    power        ir al estado 35
    factor       ir al estado 36
    data_value   ir al estado 37
    data_vector  ir al estado 38


Estado 18

    2 input: END_OF_INSTR . input

    FUN                 desplazar e ir al estado 1
    GLOBAL              desplazar e ir al estado 2
    STATIC              desplazar e ir al estado 3
    INT_VAL             desplazar e ir al estado 4
    REAL_VAL            desplazar e ir al estado 5
    BOOL_VAL            desplazar e ir al estado 6
    INT_TYPE            desplazar e ir al estado 7
    REAL_TYPE           desplazar e ir al estado 8
    BOOL_TYPE           desplazar e ir al estado 9
    CHAR_TYPE           desplazar e ir al estado 10
    VOID                desplazar e ir al estado 11
    SUBSTRACT           desplazar e ir al estado 12
    INCREMENT           desplazar e ir al estado 13
    DECREMENT           desplazar e ir al estado 14
    NOT                 desplazar e ir al estado 15
    CURLY_BRACKET_OPEN  desplazar e ir al estado 16
    PARETHESES_OPEN     desplazar e ir al estado 17
    END_OF_INSTR        desplazar e ir al estado 18
    OPEN_CONTEXT_TAG    desplazar e ir al estado 19
    CHAR_QUOTE          desplazar e ir al estado 20
    STRING_QUOTE        desplazar e ir al estado 21
    ID                  desplazar e ir al estado 22

    $default  reduce usando la regla 4 (input)

    input        ir al estado 53
    data_init    ir al estado 24
    array_init   ir al estado 25
    data_type    ir al estado 26
    instr        ir al estado 27
    fun_init     ir al estado 28
    fun_call     ir al estado 29
    while_instr  ir al estado 30
    for_instr    ir al estado 31
    if_instr     ir al estado 32
    expr         ir al estado 33
    term         ir al estado 34
    power        ir al estado 35
    factor       ir al estado 36
    data_value   ir al estado 37
    data_vector  ir al estado 38


Estado 19

    3 input: OPEN_CONTEXT_TAG . input CLOSE_CONTEXT_TAG input

    FUN                 desplazar e ir al estado 1
    GLOBAL              desplazar e ir al estado 2
    STATIC              desplazar e ir al estado 3
    INT_VAL             desplazar e ir al estado 4
    REAL_VAL            desplazar e ir al estado 5
    BOOL_VAL            desplazar e ir al estado 6
    INT_TYPE            desplazar e ir al estado 7
    REAL_TYPE           desplazar e ir al estado 8
    BOOL_TYPE           desplazar e ir al estado 9
    CHAR_TYPE           desplazar e ir al estado 10
    VOID                desplazar e ir al estado 11
    SUBSTRACT           desplazar e ir al estado 12
    INCREMENT           desplazar e ir al estado 13
    DECREMENT           desplazar e ir al estado 14
    NOT                 desplazar e ir al estado 15
    CURLY_BRACKET_OPEN  desplazar e ir al estado 16
    PARETHESES_OPEN     desplazar e ir al estado 17
    END_OF_INSTR        desplazar e ir al estado 18
    OPEN_CONTEXT_TAG    desplazar e ir al estado 19
    CHAR_QUOTE          desplazar e ir al estado 20
    STRING_QUOTE        desplazar e ir al estado 21
    ID                  desplazar e ir al estado 22

    $default  reduce usando la regla 4 (input)

    input        ir al estado 54
    data_init    ir al estado 24
    array_init   ir al estado 25
    data_type    ir al estado 26
    instr        ir al estado 27
    fun_init     ir al estado 28
    fun_call     ir al estado 29
    while_instr  ir al estado 30
    for_instr    ir al estado 31
    if_instr     ir al estado 32
    expr         ir al estado 33
    term         ir al estado 34
    power        ir al estado 35
    factor       ir al estado 36
    data_value   ir al estado 37
    data_vector  ir al estado 38


Estado 20

   92 data_value: CHAR_QUOTE . CHAR_VAL CHAR_QUOTE

    CHAR_VAL  desplazar e ir al estado 55


Estado 21

   93 data_value: STRING_QUOTE . STRING_VAL STRING_QUOTE

    STRING_VAL  desplazar e ir al estado 56


Estado 22

   20 instr: ID . array_access
   21      | ID . ASSIGN expr
   22      | ID . array_access ASSIGN expr
   35 fun_call: ID . PARETHESES_OPEN args PARETHESES_CLOSE END_OF_INSTR
   52 expr: ID .
   56     | ID . INCREMENT
   58     | ID . DECREMENT

    ASSIGN               desplazar e ir al estado 57
    INCREMENT            desplazar e ir al estado 58
    DECREMENT            desplazar e ir al estado 59
    SQUARE_BRACKET_OPEN  desplazar e ir al estado 60
    PARETHESES_OPEN      desplazar e ir al estado 61

    $default  reduce usando la regla 52 (expr)

    array_access  ir al estado 62


Estado 23

    0 $accept: input . $end

    $end  desplazar e ir al estado 63


Estado 24

   18 instr: data_init . ID
   19      | data_init . ID ASSIGN expr

    ID  desplazar e ir al estado 64


Estado 25

   10 data_init: array_init .

    $default  reduce usando la regla 10 (data_init)


Estado 26

    7 data_init: data_type .
   11 array_init: data_type . SQUARE_BRACKET_OPEN INT_VAL SQUARE_BRACKET_CLOSE
   12           | data_type . SQUARE_BRACKET_OPEN SQUARE_BRACKET_CLOSE

    SQUARE_BRACKET_OPEN  desplazar e ir al estado 65

    $default  reduce usando la regla 7 (data_init)


Estado 27

    1 input: instr . END_OF_INSTR input

    END_OF_INSTR  desplazar e ir al estado 66


Estado 28

   27 instr: fun_init .

    $default  reduce usando la regla 27 (instr)


Estado 29

   28 instr: fun_call .

    $default  reduce usando la regla 28 (instr)


Estado 30

   25 instr: while_instr .

    $default  reduce usando la regla 25 (instr)


Estado 31

   24 instr: for_instr .

    $default  reduce usando la regla 24 (instr)


Estado 32

   23 instr: if_instr .

    $default  reduce usando la regla 23 (instr)


Estado 33

   26 instr: expr .
   36 while_instr: expr . FOR_WHILE_CLAUSE HEADER_END END_OF_INSTR OPEN_CONTEXT_TAG input CLOSE_CONTEXT_TAG while_middle_blocks while_end_block
   41 for_instr: expr . FOR_WHILE_CLAUSE expr HEADER_END END_OF_INSTR OPEN_CONTEXT_TAG input CLOSE_CONTEXT_TAG for_middle_blocks for_end_block
   46 if_instr: expr . IF_CLAUSE HEADER_END END_OF_INSTR OPEN_CONTEXT_TAG input CLOSE_CONTEXT_TAG if_middle_blocks if_end_block
   53 expr: expr . SUM term
   54     | expr . SUBSTRACT term
   59     | expr . LESS term
   60     | expr . LESS_EQUALS term
   61     | expr . GREATER term
   62     | expr . GREATER_EQUALS term
   63     | expr . EQUALS term
   64     | expr . NOT_EQUALS term
   65     | expr . AND term
   66     | expr . OR term
   68     | expr . AND_BIT term
   69     | expr . OR_BIT term
   70     | expr . XOR_BIT term
   71     | expr . LEFT_SHIFT term
   72     | expr . RIGHT_SHIFT term
   73     | expr . UNION term
   74     | expr . DIFFERENCE term
   75     | expr . INTERSECTION term

    SUM               desplazar e ir al estado 67
    SUBSTRACT         desplazar e ir al estado 68
    AND               desplazar e ir al estado 69
    OR                desplazar e ir al estado 70
    EQUALS            desplazar e ir al estado 71
    NOT_EQUALS        desplazar e ir al estado 72
    GREATER           desplazar e ir al estado 73
    GREATER_EQUALS    desplazar e ir al estado 74
    LESS              desplazar e ir al estado 75
    LESS_EQUALS       desplazar e ir al estado 76
    AND_BIT           desplazar e ir al estado 77
    OR_BIT            desplazar e ir al estado 78
    XOR_BIT           desplazar e ir al estado 79
    LEFT_SHIFT        desplazar e ir al estado 80
    RIGHT_SHIFT       desplazar e ir al estado 81
    UNION             desplazar e ir al estado 82
    DIFFERENCE        desplazar e ir al estado 83
    INTERSECTION      desplazar e ir al estado 84
    IF_CLAUSE         desplazar e ir al estado 85
    FOR_WHILE_CLAUSE  desplazar e ir al estado 86

    $default  reduce usando la regla 26 (instr)


Estado 34

   76 expr: term .
   78 term: term . PRODUCT power
   79     | term . DIVIDE power
   80     | term . MODULUS power

    PRODUCT  desplazar e ir al estado 87
    DIVIDE   desplazar e ir al estado 88
    MODULUS  desplazar e ir al estado 89

    $default  reduce usando la regla 76 (expr)


Estado 35

   81 term: power .
   82 power: power . RADICAL factor
   83      | power . POWER factor

    POWER    desplazar e ir al estado 90
    RADICAL  desplazar e ir al estado 91

    $default  reduce usando la regla 81 (term)


Estado 36

   84 power: factor .

    $default  reduce usando la regla 84 (power)


Estado 37

   86 factor: data_value .

    $default  reduce usando la regla 86 (factor)


Estado 38

   77 expr: data_vector .

    $default  reduce usando la regla 77 (expr)


Estado 39

   33 fun_init: FUN data_type . ID PARETHESES_OPEN params PARETHESES_CLOSE HEADER_END END_OF_INSTR OPEN_CONTEXT_TAG input CLOSE_CONTEXT_TAG
   34         | FUN data_type . ID PARETHESES_OPEN params PARETHESES_CLOSE END_OF_INSTR

    ID  desplazar e ir al estado 92


Estado 40

    8 data_init: GLOBAL array_init .

    $default  reduce usando la regla 8 (data_init)


Estado 41

    5 data_init: GLOBAL data_type .
   11 array_init: data_type . SQUARE_BRACKET_OPEN INT_VAL SQUARE_BRACKET_CLOSE
   12           | data_type . SQUARE_BRACKET_OPEN SQUARE_BRACKET_CLOSE

    SQUARE_BRACKET_OPEN  desplazar e ir al estado 65

    $default  reduce usando la regla 5 (data_init)


Estado 42

    9 data_init: STATIC array_init .

    $default  reduce usando la regla 9 (data_init)


Estado 43

    6 data_init: STATIC data_type .
   11 array_init: data_type . SQUARE_BRACKET_OPEN INT_VAL SQUARE_BRACKET_CLOSE
   12           | data_type . SQUARE_BRACKET_OPEN SQUARE_BRACKET_CLOSE

    SQUARE_BRACKET_OPEN  desplazar e ir al estado 65

    $default  reduce usando la regla 6 (data_init)


Estado 44

   88 data_value: SUBSTRACT INT_VAL .

    $default  reduce usando la regla 88 (data_value)


Estado 45

   90 data_value: SUBSTRACT REAL_VAL .

    $default  reduce usando la regla 90 (data_value)


Estado 46

   55 expr: INCREMENT ID .

    $default  reduce usando la regla 55 (expr)


Estado 47

   57 expr: DECREMENT ID .

    $default  reduce usando la regla 57 (expr)


Estado 48

   67 expr: NOT term .
   78 term: term . PRODUCT power
   79     | term . DIVIDE power
   80     | term . MODULUS power

    PRODUCT  desplazar e ir al estado 87
    DIVIDE   desplazar e ir al estado 88
    MODULUS  desplazar e ir al estado 89

    $default  reduce usando la regla 67 (expr)


Estado 49

   52 expr: ID .
   56     | ID . INCREMENT
   58     | ID . DECREMENT

    INCREMENT  desplazar e ir al estado 58
    DECREMENT  desplazar e ir al estado 59

    $default  reduce usando la regla 52 (expr)


Estado 50

   31 args: args . ELEM_SEPARATOR expr
   94 data_vector: CURLY_BRACKET_OPEN args . CURLY_BRACKET_CLOSE

    CURLY_BRACKET_CLOSE  desplazar e ir al estado 93
    ELEM_SEPARATOR       desplazar e ir al estado 94


Estado 51

   32 args: expr .
   53 expr: expr . SUM term
   54     | expr . SUBSTRACT term
   59     | expr . LESS term
   60     | expr . LESS_EQUALS term
   61     | expr . GREATER term
   62     | expr . GREATER_EQUALS term
   63     | expr . EQUALS term
   64     | expr . NOT_EQUALS term
   65     | expr . AND term
   66     | expr . OR term
   68     | expr . AND_BIT term
   69     | expr . OR_BIT term
   70     | expr . XOR_BIT term
   71     | expr . LEFT_SHIFT term
   72     | expr . RIGHT_SHIFT term
   73     | expr . UNION term
   74     | expr . DIFFERENCE term
   75     | expr . INTERSECTION term

    SUM             desplazar e ir al estado 67
    SUBSTRACT       desplazar e ir al estado 68
    AND             desplazar e ir al estado 69
    OR              desplazar e ir al estado 70
    EQUALS          desplazar e ir al estado 71
    NOT_EQUALS      desplazar e ir al estado 72
    GREATER         desplazar e ir al estado 73
    GREATER_EQUALS  desplazar e ir al estado 74
    LESS            desplazar e ir al estado 75
    LESS_EQUALS     desplazar e ir al estado 76
    AND_BIT         desplazar e ir al estado 77
    OR_BIT          desplazar e ir al estado 78
    XOR_BIT         desplazar e ir al estado 79
    LEFT_SHIFT      desplazar e ir al estado 80
    RIGHT_SHIFT     desplazar e ir al estado 81
    UNION           desplazar e ir al estado 82
    DIFFERENCE      desplazar e ir al estado 83
    INTERSECTION    desplazar e ir al estado 84

    $default  reduce usando la regla 32 (args)


Estado 52

   53 expr: expr . SUM term
   54     | expr . SUBSTRACT term
   59     | expr . LESS term
   60     | expr . LESS_EQUALS term
   61     | expr . GREATER term
   62     | expr . GREATER_EQUALS term
   63     | expr . EQUALS term
   64     | expr . NOT_EQUALS term
   65     | expr . AND term
   66     | expr . OR term
   68     | expr . AND_BIT term
   69     | expr . OR_BIT term
   70     | expr . XOR_BIT term
   71     | expr . LEFT_SHIFT term
   72     | expr . RIGHT_SHIFT term
   73     | expr . UNION term
   74     | expr . DIFFERENCE term
   75     | expr . INTERSECTION term
   85 factor: PARETHESES_OPEN expr . PARETHESES_CLOSE

    SUM               desplazar e ir al estado 67
    SUBSTRACT         desplazar e ir al estado 68
    AND               desplazar e ir al estado 69
    OR                desplazar e ir al estado 70
    EQUALS            desplazar e ir al estado 71
    NOT_EQUALS        desplazar e ir al estado 72
    GREATER           desplazar e ir al estado 73
    GREATER_EQUALS    desplazar e ir al estado 74
    LESS              desplazar e ir al estado 75
    LESS_EQUALS       desplazar e ir al estado 76
    AND_BIT           desplazar e ir al estado 77
    OR_BIT            desplazar e ir al estado 78
    XOR_BIT           desplazar e ir al estado 79
    LEFT_SHIFT        desplazar e ir al estado 80
    RIGHT_SHIFT       desplazar e ir al estado 81
    UNION             desplazar e ir al estado 82
    DIFFERENCE        desplazar e ir al estado 83
    INTERSECTION      desplazar e ir al estado 84
    PARETHESES_CLOSE  desplazar e ir al estado 95


Estado 53

    2 input: END_OF_INSTR input .

    $default  reduce usando la regla 2 (input)


Estado 54

    3 input: OPEN_CONTEXT_TAG input . CLOSE_CONTEXT_TAG input

    CLOSE_CONTEXT_TAG  desplazar e ir al estado 96


Estado 55

   92 data_value: CHAR_QUOTE CHAR_VAL . CHAR_QUOTE

    CHAR_QUOTE  desplazar e ir al estado 97


Estado 56

   93 data_value: STRING_QUOTE STRING_VAL . STRING_QUOTE

    STRING_QUOTE  desplazar e ir al estado 98


Estado 57

   21 instr: ID ASSIGN . expr

    INT_VAL             desplazar e ir al estado 4
    REAL_VAL            desplazar e ir al estado 5
    BOOL_VAL            desplazar e ir al estado 6
    SUBSTRACT           desplazar e ir al estado 12
    INCREMENT           desplazar e ir al estado 13
    DECREMENT           desplazar e ir al estado 14
    NOT                 desplazar e ir al estado 15
    CURLY_BRACKET_OPEN  desplazar e ir al estado 16
    PARETHESES_OPEN     desplazar e ir al estado 17
    CHAR_QUOTE          desplazar e ir al estado 20
    STRING_QUOTE        desplazar e ir al estado 21
    ID                  desplazar e ir al estado 49

    expr         ir al estado 99
    term         ir al estado 34
    power        ir al estado 35
    factor       ir al estado 36
    data_value   ir al estado 37
    data_vector  ir al estado 38


Estado 58

   56 expr: ID INCREMENT .

    $default  reduce usando la regla 56 (expr)


Estado 59

   58 expr: ID DECREMENT .

    $default  reduce usando la regla 58 (expr)


Estado 60

   51 array_access: SQUARE_BRACKET_OPEN . INT_VAL SQUARE_BRACKET_CLOSE

    INT_VAL  desplazar e ir al estado 100


Estado 61

   35 fun_call: ID PARETHESES_OPEN . args PARETHESES_CLOSE END_OF_INSTR
